--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
+body {
+  background-image: url("https://image.freepik.com/free-vector/sea-background-video-conferencing_52683-43718.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#lobster,
+#crab,
+#salmon {
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+}
+
+#fact {
+  color: white;
+  font-size: 30px;
+  font-weight: 700;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-wrap: wrap;
 }
